# ChangeLog for sys-apps/hal
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.232 2008/05/20 04:21:15 compnerd Exp $

*hal-0.5.11 (20 May 2008)

  20 May 2008; Saleem Abdulrasool <compnerd@gentoo.org> +hal-0.5.11.ebuild:
  Version bump from upstream

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +files/hal-0.5.10-autotools.patch, hal-0.5.10.ebuild:
  Fix building with newer libtool #212772.

  14 Apr 2008; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild,
  hal-0.5.9-r1.ebuild, hal-0.5.9.1-r1.ebuild, hal-0.5.9.1-r2.ebuild,
  hal-0.5.9.1-r3.ebuild, hal-0.5.10.ebuild:
  cryptsetup-luks -> cryptsetup

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> hal-0.5.10.ebuild:
  Add ~ia64/~sparc wrt #200050

  03 Apr 2008; Tobias Klausmann <klausman@gentoo.org> hal-0.5.10.ebuild:
  Keyworded for alpha, bug #216084

  02 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> hal-0.5.10.ebuild:
  Keyword ~mips since we're using linux-headers now.

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> hal-0.5.7.1-r5.ebuild,
  hal-0.5.9-r1.ebuild, hal-0.5.9.1-r1.ebuild, hal-0.5.9.1-r2.ebuild,
  hal-0.5.9.1-r3.ebuild, hal-0.5.10.ebuild:
  I hate blank spaces in output for no reason, so switching from using echo to
  using an extra \n at the end of the line.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> hal-0.5.7.1-r5.ebuild,
  hal-0.5.9-r1.ebuild, hal-0.5.9.1-r1.ebuild, hal-0.5.9.1-r2.ebuild,
  hal-0.5.9.1-r3.ebuild, hal-0.5.10.ebuild:
  Refactoring Linux kernel checks so hal doesn't bomb out on an unconfigured
  kernel. Closing bug #209025.

  10 Jan 2008; Jeroen Roovers <jer@gentoo.org> hal-0.5.10.ebuild:
  Marked ~hppa (bug #200050).

  07 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org> hal-0.5.10.ebuild:
  Add a message regarding keyboard layout mechanisms

  05 Jan 2008; Saleem Abdulrasool <compnerd@gentoo.org> hal-0.5.10.ebuild:
  Add laptop useflag for pm-utils
