@@ -66,12 +66,12 @@ DIST hal-0.5.7.1.tar.gz 1503156 RMD160 2861818b29546bd3628b1bda3d41238cf644c644 
 DIST hal-0.5.9.1-r2.tar.bz2 4246 RMD160 2b1646289c23db868bd969f7ae851e6c2d317bad SHA1 32db287e0eff7f4754b89633909daf0f6e957009 SHA256 f28ed6e02df926ef485fff79587856eb0155c747e311d83d1b6b5e3a25b924c2
 DIST hal-0.5.9.1.tar.gz 1596347 RMD160 4f1f8b9513d4e168d4d043970c062cc9084f554f SHA1 fc29322a0beba73c2eab3e0a44f9b820a5fbccdd SHA256 5dc5cf08502510a00cecd6e04ef006a74ba7ed4b31d25187b5efadd70a78733b
 DIST hal-0.5.9.tar.gz 1587364 RMD160 bc97bf63e35d36bdb5731c3447036425dc7adeb9 SHA1 5832d97bcaf3dabb9aeb919226e3c38d366057ac SHA256 65d8f8eeb61e7609a8c5001b6660d90e7a482c4b74b4e226d09b433dc1a80c9d
-EBUILD hal-0.5.10.ebuild 8241 RMD160 00764c22fba90931d04df50f17c24e29f422c593 SHA1 2bffcfd8a14fe935d0d161b0c20592d79aa3a355 SHA256 480d0bebd3514c4f87a4ab08fa246e3a45b4303c850fba16b1fab03dec07c196
+EBUILD hal-0.5.10.ebuild 8245 RMD160 3d949ff211ebff05339129cf9f0d8707ef466f7b SHA1 3c419529a5507fe45e7beb974a6a7dde31959d91 SHA256 fd34e5bc301ae5877a5127db9c49a35e2937caac835cd08e6c43ef6a4697800b
 EBUILD hal-0.5.11.ebuild 9132 RMD160 c42dcd3f8fba599caae859d90957669a21b3fa22 SHA1 047bcc76bc0186fbc9526dfb865d3e7db4f4c905 SHA256 e3e2a0c172c1394146a993466d6bf3e1347e9234d0e9e7e6280de43c7a98e63e
-EBUILD hal-0.5.7.1-r5.ebuild 6067 RMD160 bf7878abe57b172e666525c13b0e4dbd39637876 SHA1 6e43d5ebe5ced9335b1cfbfde4460f2c419ed3f4 SHA256 9345ecb735fef7a2a128c376f2066f1bed4672111cc6e9cf069f5099ec48dc83
-EBUILD hal-0.5.9-r1.ebuild 8122 RMD160 70084695e44bd5c447bced144c12d2bc929bae26 SHA1 02f75e54bcbbbe83630580aeb6136df9d249e568 SHA256 70add4df1c19a4c718aee63562a79148107f878f7f4914dfca1ae193c7dc8677
-EBUILD hal-0.5.9.1-r1.ebuild 7196 RMD160 7901a628085ed9996586c66bca9073d975185900 SHA1 be3978b3fbb8b8b03e06e1ad0b2ff31c1b4c11d3 SHA256 ff560bd8a67b98be80b7bab3c13f3af26f8ccd3a55890919cfb52a00196b4bb7
-EBUILD hal-0.5.9.1-r2.ebuild 6872 RMD160 069f0dde0e7a889d6e1169abf8205dfe80eaa303 SHA1 b18b6435ed3fe6a30436fc8f6120d92f2cf1aa24 SHA256 d0f9e70c9e3dfd8626556fbb27aab3d74c9f14e06609099cd585c0de1814ea12
-EBUILD hal-0.5.9.1-r3.ebuild 6862 RMD160 aada2db7113ca51aed519df6d290695812bc43f1 SHA1 7cd816950e9b06862e9c5b050a741b846e24cbc1 SHA256 7f2ba64b39b5121a412d9689ce38721132f876000434b121a833e09d5421b099
-MISC ChangeLog 37727 RMD160 d8be91ebd3c2854a21213b88162e0862000714f0 SHA1 0c04298b987799c1750f3ce88272771d63304044 SHA256 aecb60e945177f028ff022f54662d7b59166a390760fb8d18b7d72df1e238ee6
+EBUILD hal-0.5.7.1-r5.ebuild 6071 RMD160 60716b2c7ee1a8975437ce7202693d6afe4f4827 SHA1 a5ff8967f35cd274f0332d31375c40a2dc7b0365 SHA256 2d0ad70486b0daea4427e7fe175d2efe83c6b26eb7a65118383c5b612c4276cf
+EBUILD hal-0.5.9-r1.ebuild 8126 RMD160 5fa699350af9035dc46ce28ae47fbbbf1372d73f SHA1 fbb47635761675592f1dab9366d17aca9078bd42 SHA256 0eed38206886b8b27ec7021c5e098e204c6dcb610b5d38cc46928fc94cc8be1d
+EBUILD hal-0.5.9.1-r1.ebuild 7200 RMD160 825b2e12573f0e164fc95c747f883a4ff8fe407d SHA1 c411dd412d4bea656d36b8b5f337d7153c789e23 SHA256 acb2a201f38e6479155270fbbb2bf1866cc5729b0bac0e0ce1e776e5776959e5
+EBUILD hal-0.5.9.1-r2.ebuild 6876 RMD160 44e9c3c9dec8212f35b1b2bc2c29e0379ccfa2e6 SHA1 985e45b257741dcd5906a9af30cab854fc65fbd7 SHA256 9eda880949eb2ffb864102ec240b594be465cf5a5f26180c393bc3ffb0a89fd2
+EBUILD hal-0.5.9.1-r3.ebuild 6866 RMD160 74d77db8e6d4909a01ce886238ff3ea1c38790cb SHA1 830da9dbe53cadeccf4cf53766e39f19fc9f3801 SHA256 0bf9e0b12000ffab6bf9541c140eabfbd22942652bcf1dbf50edcfdd7ff703dc
+MISC ChangeLog 37947 RMD160 526b265ab006fa4ca4c81ba6ca37fe6569f76d56 SHA1 36d70ebdcf872846d85cfaa7111f1a3209b7a7ae SHA256 b3a6a01cc7ba4a18adb9d0d5e7d9f15e6a5dc84d064d11110a5f99ca35a7a37f
 MISC metadata.xml 1936 RMD160 c9a2cc56d91ca9a12850cbbe68dd36079da0ccae SHA1 a0ccb91c8a4288cc6021ccc0c4c939bd2dad9570 SHA256 e73a89f3e8c110c5bd93a4bcc16c89e97067dfda97b4a4d6dc27330d9b5e51ee
